# stencil

./: .gitignore  .travis.yml  CHANGES  LICENSE  README.md  README.rst  pyproject.toml  requirements-test.txt  setup.py  stencil.py  test.py  test_lib.py  tox.ini  utils.py
docs/: conf.py  extending.rst  index.rst  make.bat  using.rst  writing.rst
tests/: test_lib.py
tests/integration/: test.py  test_output.py
tests/integration/tmpl/: 01_deep.json  01_deep.out  01_deep.tpl  01_simple.out  01_simple.tpl  03_if.tpl  04_ifnot.tpl  05_filter_args.json  05_filter_args.tpl  06_include.out  06_include.tpl  07_var.json  07_var.tpl  10_extends.out  10_extends.tpl  10_parent.html  11_with.out  11_with.tpl
tests/unit/: test_expression.py  test_lib.py  test_stencil.py
tmpl/: 01_simple.json  01_simple.tpl  02_for.json  02_for.out  02_for.tpl  03_if.json  05_filter.json  05_filter.tpl  06_include.json  06_include.out  06_include.tpl  07_var.out  07_var.tpl  08_comment.out  08_comment.tpl  09_load.tpl  10_extends.tpl
