[project]
name = "stencil-template"
description = "A template engine light enough to embed in your project."

readme = "README.rst"

license.text = "MIT"

authors = [
    { name = "Curtis Maloney", email = "curtis@tinbrain.net" }
]
keywords = [
    "template",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

[project.urls]
Repository = "https://github.com/funkybob/stencil/"
Documentation = "https://stencil-templates.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = [
    "ruff",
    "pytest",
    "coverage",
]

[tool.setuptools.dynamic]
version.attr = "stencil.__version__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = [
    'E',
    'F',
    'W',
    'I', # isort
    'N',
    'UP',
    'S', # bandit (security)
    'A', # builtins
    'C', # commas
    'C4', # comprehensions
    'DTZ', # datetimez
    'DJ', # django
    'ISC', # implicit string concat
    'PIE',
    'ARG', # unused arguments
    'PL', # pylint
    'FLY', # f-string usages
    'PERF',
    'RUF', # ruff specific
]

ignore = [
    "ISC001", # conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    'S101', # Ignore asserts in tests
]
